--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
     <meta charset="utf-8">
     <title>Tic-tac-toe</title>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css?family=Black+Han+Sans" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <script  src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous" defer></script>
-    <script type="text/javascript" src="myscript.js" defer> </script>
+    <script src="myscript.js" defer> </script>
   </head>
   <body>
     <div id="playfield">
@@ -20,5 +21,6 @@
       <div class="box" id="box8"></div>
       <div class="box" id="box9"></div>
     </div>
+    <p></p>
   </body>
 </html>
